--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ page.title }} | Drama Mama by GoddessArtemis</title>
+    <link href="http://katie.gietzen.net/atom.xml" rel="alternate" title="Drama Mama" type="application/atom+xml" />
 
     <link rel="stylesheet" href="/stylesheets/styles.css">
     <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
