Links in the header.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,11 +18,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Drama Mama</h1>
+        <h1><a href="{{ site.url }}">Drama Mama</a></h1>
         <p>The scattered thoughts of a new mom.</p>
         <p class="view"><a href="https://github.com/GoddessArtemis">View the Project on GitHub <small>GoddessArtemis</small></a></p>
         <ul>
-          <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/goddessartemis.github.com">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
