--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <p>The scattered thoughts of a new mom.</p>
         <p class="view"><a href="https://github.com/GoddessArtemis">View the Project on GitHub <small>GoddessArtemis</small></a></p>
         <ul>
-          <li class="single"><a href="https://github.com/goddessartemis.github.com">View On <strong>GitHub</strong></a></li>
+          <li class="single"><a href="https://github.com/GoddessArtemis/goddessartemis.github.com">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
