--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,4 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 {{ content }}
-<div><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %d %b %Y %I:%M %p" }}</span></div>
+<div><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %d %b %Y %I:%M %p (%Z)" }}</span></div>
