--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 {{ content }}
-<div><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %d %b %Y %I:%M %p (%Z)" }}</span></div>
+<div class="post-time"><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %d %b %Y %I:%M %p (%Z)" }}</span></div>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
