--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -71,7 +71,7 @@ header {
 header h1 {
   margin: 0;
   padding: 0;
-  font-size: 24px;
+  font-size: 18pt;
   line-height: 1.2;
   color: #069;
   text-shadow: rgba(255, 255, 255, 0.9) 0 1px 0;
@@ -208,11 +208,12 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 28px;
+  font-size: 18pt;
 }
 
 h2 {
   color: #393939;
+  font-size: 14pt;
 }
 
 h3, h4, h5, h6 {
@@ -364,6 +365,18 @@ footer p + p {
 .disqus-thread
 {
   font-size: 0.8em;
-  margin-left: 2em;
+  text-align: right;
+  margin-bottom: 1em;
   display: block;
+}
+
+.date
+{
+  font-weight: bold;
+  margin-right: 0.5em;
+}
+
+.read-more
+{
+  white-space: nowrap;
 }
