--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,8 @@ layout: default
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     var disqus_shortname = 'dramamama';
+    var disqus_title = '{{ page.title }}';
+    var disqus_identifier = '{{ site.url }}{{ post.id }}';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
