--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
 <script type="text/javascript">
     var disqus_shortname = 'dramamama';
     var disqus_title = '{{ page.title }}';
-    var disqus_identifier = '{{ site.url }}{{ post.url }}';
+    var disqus_identifier = '{{ site.url }}{{ page.id }}';
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
         dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
