--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
+<div class="post-time"><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %b %d %Y (%I:%M %p)" }}</span></div>
 {{ content }}
-<div class="post-time"><span data-iso-date="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%a, %d %b %Y %I:%M %p (%Z)" }}</span></div>
 
 <div id="disqus_thread"></div>
 <script type="text/javascript">
