--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -83,7 +83,7 @@ header p {
   margin: 0;
   color: #61778B;
   width: 300px;
-  font-size: 13px;
+  font-size: 1.2em;
 }
 header p.view {
   display: none;
@@ -195,7 +195,7 @@ section {
 h1, h2, h3, h4, h5, h6 {
   color: #222;
   padding: 0;
-  margin: 0 0 20px;
+  margin: 0 0 5px;
   line-height: 1.2;
 }
 
@@ -358,8 +358,8 @@ footer p + p {
 
 .post-time
 {
-  float: right;
   margin-bottom: 1em;
+  font-size: 0.8em;
 }
 
 .disqus-thread
